# ia2

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: basic_animation.py  custom_element.py  input_demo_pygame.py  interactive_app.py  opengl_test.py  sine_wave.py  static_image.py  text_orientation_test.py
ia2/: __init__.py  audio.py  bezier.py  context.py  draw.py  frames.py  intersect.py  math.py  scene.py  types.py  wave_table.py
tests/: conftest.py  test_bezier.py  test_context.py  test_draw.py  test_frames.py  test_intersect.py  test_math.py  test_scene.py  test_types.py  test_wave_table.py
