[project]
name = "ia2"
version = "0.1.0"
dependencies = [
    "pycairo",
    "pygame-ce",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
opengl = ["moderngl"]
dev = ["pytest", "pytest-cov", "ruff"]

[tool.setuptools]
packages = ["ia2"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
